# thetagang

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  .taplo.toml  AGENTS.md  CLAUDE.md  COPYING  Dockerfile  README.md  alembic.ini  entrypoint.bash  extract-installer.sh  ibc-config.ini  pyproject.toml  thetagang.toml  vscode.py
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: review-config.instructions.md  review-core.instructions.md
.github/workflows/: docker-publish-dockerhub.yml  docker-publish-github.yml  docker-publish.yml  python-publish.yaml  python-test.yaml  ruff.yml  update-ibc.yml  update-ibkr-gateway.yml
alembic/: env.py
alembic/versions/: 0001_create_state_tables.py  0002_add_order_intents.py  0003_add_cash_transactions.py
docker/: patch-ibc-java-logging.sh
image-files/: replace.sh  start.sh
stubs/click_log/: __init__.pyi  core.pyi  options.pyi
stubs/schema/: __init__.pyi
stubs/schema/contextlib2/: __init__.pyi
tests/: test_buy_only_relative_threshold.py  test_config.py  test_config_migration.py  test_config_new.py  test_db.py  test_exchange_hours.py  test_flex.py  test_ibkr.py  test_legacy_config.py  test_main_cli.py  test_order_pricing.py  test_patch_ibc_java_logging.py  test_portfolio_manager.py  test_post_strategy_engine.py  test_regime_rebalance.py  test_runtime_services.py  test_sell_only_rebalancing.py  test_strategy_stage_runners.py  test_symbol_config_resolution_integration.py  test_thetagang_startup.py  test_thetagang_watchdog.py  test_trading_operations.py  test_util.py  test_write_calls_threshold.py
thetagang/: config.py  config_defaults.py  config_models.py  db.py  dict_merge.py  entry.py  exchange_hours.py  flex.py  fmt.py  ibgateway-log4j2.xml  ibkr.py  legacy_config.py  log.py  main.py  options.py  orders.py  portfolio.py  portfolio_manager.py  test_buy_only_percent.py  test_config.py  test_ibkr.py  test_portfolio_manager.py  test_trades.py  test_util.py  thetagang.py  trades.py  trading_operations.py  util.py
thetagang/config_migration/: __init__.py  io_safe.py  migrate_v1_to_v2.py  migration_report.py  schema_detect.py  startup_migration.py
thetagang/strategies/: __init__.py  equity.py  equity_engine.py  options.py  options_engine.py  post.py  post_engine.py  regime_engine.py  runtime_services.py
