[tool.poetry]
authors       = ["Brenden Matthews <brenden@brndn.io>"]
description   = "ThetaGang is an IBKR bot for getting money"
documentation = "https://github.com/brndnmtthws/thetagang/blob/master/README.md"
homepage      = "https://github.com/brndnmtthws/thetagang"
license       = "AGPL-3.0-only"
name          = "thetagang"
readme        = "README.md"
repository    = "https://github.com/brndnmtthws/thetagang.git"
version       = "1.11.0"

  [tool.poetry.dependencies]
  click           = "^8.1.3"
  click-log       = "^0.4.0"
  ib_insync       = "^0.9.86"
  more-itertools  = ">=9.1,<11.0"
  numpy           = "^1.26.0"
  python          = ">=3.10,<3.13"
  python-dateutil = "^2.8.1"
  pytimeparse     = "^1.1.8"
  rich            = "^13.7.0"
  schema          = "^0.7.5"
  toml            = "^0.10.2"

  [tool.poetry.group.dev.dependencies]
  autohooks              = ">=23.4,<25.0"
  autohooks-plugin-black = ">=22.11,<24.0"
  autohooks-plugin-ruff  = ">=23.10,<25.0"
  black                  = "^24.1.1"
  pytest                 = "^8.0.0"
  pytest-watch           = "^4.2.0"
  ruff                   = ">=0.1.1,<0.5.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/brndnmtthws/thetagang/issues"
"GitHub"      = "https://github.com/brndnmtthws/thetagang"

[tool.poetry.scripts]
thetagang = 'thetagang.entry:cli'

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "120"

[tool.autohooks]
mode = "poetry"
pre-commit = [
  "autohooks.plugins.black",
  "autohooks.plugins.ruff",
]

[build-system]
build-backend = "poetry.masonry.api"
requires      = ["poetry>=0.12"]

[tool.ruff]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default. "A" enables type annotation checks.
select = ["ANN", "E4", "E7", "E9", "F", "I", "W"]
# ignore self method type annotations
ignore = ["ANN1"]

exclude = ["stubs"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable   = ["ALL"]
unfixable = []

# Same as Black.
line-length = 88

target-version = "py39"

[tool.pyright]
defineConstant          = { DEBUG = true }
pythonVersion           = "3.10"
reportUnknownLambdaType = false
stubPath                = "stubs"
venv                    = ".venv"
venvPath                = "."
