[project]
authors = [{ name = "Brenden Matthews", email = "brenden@brndn.io" }]
dependencies = [
  "alembic>=1.13,<2",
  "click>=8.1.3,<9",
  "click-log>=0.4.0,<0.5",
  "more-itertools>=9.1,<11.0",
  "numpy>=1.26,<3.0",
  "python-dateutil>=2.8.1,<3",
  "pytimeparse>=1.1.8,<2",
  "rich>=13.7.0,<15",
  "schema>=0.7.5,<0.8",
  "sqlalchemy>=2.0,<3",
  "toml>=0.10.2,<0.11",
  "ib-async>=2.0.1,<3",
  "pydantic>=2.10.2,<3",
  "annotated-types>=0.7.0,<0.8",
  "polyfactory>=2.18.1,<4",
  "exchange-calendars>=4.12",
]
description = "ThetaGang is an IBKR bot for getting money"
license = "AGPL-3.0-only"
name = "thetagang"
readme = "README.md"
requires-python = ">=3.10,<3.15"
version = "2.0.0"

  [project.urls]
  "Bug Tracker" = "https://github.com/brndnmtthws/thetagang/issues"
  Documentation = "https://github.com/brndnmtthws/thetagang/blob/master/README.md"
  GitHub        = "https://github.com/brndnmtthws/thetagang"
  Homepage      = "https://github.com/brndnmtthws/thetagang"
  Repository    = "https://github.com/brndnmtthws/thetagang.git"

  [project.scripts]
  thetagang = "thetagang.entry:cli"

[dependency-groups]
dev = [
  "pre-commit>=4.0.1",
  "pytest>=8.0.0,<10",
  "pytest-mock>=3.14.0,<4",
  "pytest-asyncio>=0.23.0,<1.4",
  "pytest-watch>=4.2.0,<5",
  "ruff>=0.14.13",
  "ty>=0.0.12,<1",
]

[tool.ruff]
# Same as Black.
line-length = 88
target-version = "py310"
exclude = ["stubs"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default. "A" enables type annotation checks.
select = ["ANN", "E4", "E7", "E9", "F", "I", "W"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable   = ["ALL"]
unfixable = []

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.hatch.build]
include = ["thetagang/**", "alembic.ini", "alembic/**"]

[tool.uv]
package = true
